--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </ul>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="https://github.com/yashAgarwal41"><img src="github2.png" alt=""
+          <a class="nav-link" href="https://github.com/Yash-Khokhar"><img src="github2.png" alt=""
               class="nav-icon" /></a>
         </li>
       </ul>
@@ -129,8 +129,8 @@
     <!------------- Footer Starts ------------->
     <footer id="footer">
       <p>
-        Made with
-        <img src="heart.png" id="heart" height="12px" width="12px" /> by Yash
+        Made by Yash Khokhar
+        <!-- <img src="heart.png" id="heart" height="12px" width="12px" /> by Khokhar -->
       </p>
     </footer>
     <!------------- Footer Ends --------------->
